--- a/2_python_refresher/2_1_python_intro_lectures.ipynb
+++ b/2_python_refresher/2_1_python_intro_lectures.ipynb
@@ -102,7 +102,7 @@
    "id": "c7e0aafa-b675-4d46-836c-188641cc3c10",
    "metadata": {},
    "source": [
-    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #545557ff;\">\n",
+    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #6BA3D0;\">\n",
     "  <strong>Tip:</strong> Use triple quotes (`\"\"\"` or `'''`) for multi-line strings, which are perfect for longer strings, such as prompts to LLMs.\n",
     "</div>\n"
    ]
@@ -192,7 +192,7 @@
    "id": "cdf20e4b-f1a8-4ffc-8237-a39290a86cb9",
    "metadata": {},
    "source": [
-    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #545557ff;\">\n",
+    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #6BA3D0;\">\n",
     "  <strong>Tip:</strong> When building LLM applications, use `type()` to verify you're sending the right kind of data to a function. Many errors occur when you accidentally send a number as text or vice versa.\n",
     "</div>\n"
    ]
@@ -720,7 +720,7 @@
    "id": "f8293b11-ea58-42be-945d-a5634cdb97ed",
    "metadata": {},
    "source": [
-    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #545557ff;\">\n",
+    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #6BA3D0;\">\n",
     "  <strong>Tip:</strong> Stick with f-strings for new code. They're more readable, faster, and less error-prone.\n",
     "</div>\n",
     "\n"
@@ -2336,7 +2336,7 @@
    "id": "4b1b8b9c",
    "metadata": {},
    "source": [
-    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #545557ff;\">\n",
+    "<div style=\"border-left: 6px solid #36C; padding: 10px; background-color: #6BA3D0;\">\n",
     "  <strong>Fact:</strong> Errors are not always bad. They can be useful. <br />\n",
     "  Suppose you want to do something <span style=\"color: #ed8c2bff\">if you try to remove an item from the set and it's not there.</span> You can use the KeyError messege in your logic to achieve what you want. \n",
     "</div>\n",
@@ -4541,7 +4541,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "sandbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4555,7 +4555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
