--- a/3_gen_ai_code/3_1_Coding_with_GenAI.ipynb
+++ b/3_gen_ai_code/3_1_Coding_with_GenAI.ipynb
@@ -401,37 +401,150 @@
     "\n",
     "Analysis of AI code generation failures reveals recurring patterns of prompting errors. Understanding these patterns prevents wasted effort and improves success rates.\n",
     "\n",
-    "**Error 1: Insufficient Context**\n",
-    "Prompts often assume the AI possesses implicit knowledge about the project or requirements. For example, *\"add a function to calculate the metrics\"* fails to specify which metrics, the data structure, or integration requirements. The AI operates solely on explicitly provided information.\n",
-    "*Solution:* Include all relevant context—data structures, dependencies, and exact requirements—so the task could be completed by someone seeing the project for the first time.\n",
+    "---\n",
     "\n",
-    "**Error 2: Incorrect assumptions about data format – Format underspecified or implied incorrectly.**\n",
-    "When a prompt fails to define the precise structure or type of data, the AI may produce code that breaks on real inputs. For example, assuming dates are `YYYY-MM-DD` when the file actually uses `MM/DD/YYYY` can cause parsing errors or miscalculations.\n",
-    "*Solution:* Explicitly state column names, data types, units, encoding, and format details in the prompt.\n",
+    "#### Error 1: Insufficient Context\n",
+    "**Problem:** Assuming the AI already knows project details.\n",
     "\n",
-    "**Error 3: Over-generalization – Asks for too broad a solution instead of the actual need.**\n",
-    "Requests such as *\"Analyze customer behavior\"* without clarifying the specific goal force the AI to guess. This often produces results that are correct in a general sense but useless for the intended application.\n",
-    "*Solution:* Narrow prompts to the real requirement, e.g., *\"Identify customers who purchased more than twice in the last quarter but have not purchased in the past 30 days.\"*\n",
+    "**Examples (bad):**\n",
+    "- “Fix this issue.” → Which specific issue?\n",
+    "- “Give me the results.” → Which results, from what?\n",
+    "- “I want that!” → What does *that* refer to?\n",
+    "- “Add a function to calculate the metrics.” → Which metrics?\n",
     "\n",
-    "**Error 4: Excessive Scope**\n",
-    "Attempting to generate entire systems in a single prompt—*\"Build a complete CRM with frontend, backend, database, and analytics\"*—causes the AI to spread effort too thin, leading to incomplete or inconsistent results.\n",
-    "*Solution:* Decompose into smaller, sequential tasks and build incrementally.\n",
+    "**Better examples:**\n",
+    "- “Give me the sales results from Q2.”\n",
+    "- “Fix the grammar and correct any typos in the introduction.”\n",
     "\n",
-    "**Error 5: Performance constraint handling – Ignores realistic data size limits.**\n",
-    "If prompts fail to mention that the dataset contains millions of records, the AI may produce slow, memory-intensive code that works only on toy examples.\n",
-    "*Solution:* Specify performance expectations—runtime, memory limits, and optimization strategies such as vectorized operations or streaming.\n",
+    "**Solution:** Dangling demonstratives are not your friend—always provide full context: data structures, dependencies, and exact requirements. Be explicit about what to change or retrieve.\n",
     "\n",
-    "**Error 6: Silent logical errors – Ambiguity that could produce plausible but wrong results.**\n",
-    "A prompt like *\"calculate monthly revenue\"* without clarifying whether partial months should be included may yield technically correct but misleading results.\n",
-    "*Solution:* Define all calculation rules and edge cases explicitly to remove ambiguity.\n",
+    "---\n",
     "\n",
-    "**Error 7: Security vulnerabilities – Missing sanitization, unsafe file or string handling, etc.**\n",
-    "Omitting security requirements can lead to code that is vulnerable to SQL injection, path traversal, or unsafe deserialization.\n",
-    "*Solution:* Require input validation, sanitization, safe file handling, and the use of secure APIs.\n",
+    "#### Error 2: Wrong Format\n",
+    "**Problem:** The format of the input or output is underspecified or assumed incorrectly.\n",
     "\n",
-    "**Error 8: Compatibility/Integration issues (Style/Library/Design) – Likely to produce code incompatible with given context (e.g., wrong library, naming mismatch, breaking provided helpers).**\n",
-    "For example, if the project uses `polars` but the prompt does not specify this, the AI might default to `pandas`, causing integration failures.\n",
-    "*Solution:* Clearly state the required libraries, versions, coding style, and compatibility constraints.\n"
+    "**Examples (bad):**\n",
+    "- Dates assumed MM-DD-YYYY but file uses DD-MM-YYYY.\n",
+    "- “Give me a summary.” → One sentence, three bullets, or a full page?\n",
+    "- “Export the results.” → Format not specified (CSV, JSON, Excel, text).\n",
+    "- “Give me an image.” → Format/size unclear (PNG/JPG/SVG, resolution?).\n",
+    "\n",
+    "**Better examples:**\n",
+    "- “Input dates are in MM-DD-YYYY format.”\n",
+    "- “Give me a three-bullet summary of the introduction.”\n",
+    "- “Export a CSV with columns: name, age, score.”\n",
+    "- “Generate a PNG at 800×600.”\n",
+    "\n",
+    "**Solution:** Always specify formats for inputs and outputs—column names, data types, units, length, style, or file formats.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Error 3: Ambiguity (Vagueness or Conflicting Requirements)\n",
+    "**Problem:** Prompt is too vague or contains conflicting instructions.\n",
+    "\n",
+    "**Examples (bad):**\n",
+    "- “Analyze customer behavior.” → Which customers, which behaviors, which timeframe?\n",
+    "- “Improve the product.” → Improve what—features, design, cost, or speed?\n",
+    "- “Make it detailed but brief.” → Contradiction.\n",
+    "- “Be creative but follow this exact template.” → Conflicting constraints.\n",
+    "\n",
+    "**Better examples:**\n",
+    "- “Identify customers who purchased 2+ times last quarter but not in the past 30 days.”\n",
+    "- “Suggest two UI changes to make the checkout process faster.”\n",
+    "- “Write a detailed analysis in exactly 200 words.”\n",
+    "- “Use this template structure but vary the language creatively.”\n",
+    "\n",
+    "**Solution:** Be specific, define boundaries, and clarify priorities when requirements conflict.  \n",
+    "**Quick check:**\n",
+    "- Can I imagine the output in my mind’s eye?\n",
+    "- Would a colleague know exactly what to deliver?\n",
+    "- Do any requirements contradict each other?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Error 4: Excessive Scope\n",
+    "**Problem:** Request is too large to be realistic in one prompt.\n",
+    "\n",
+    "**Examples (bad):**\n",
+    "- “Build a complete mobile app with login, payments, and analytics.”\n",
+    "- “Summarize modern history.”\n",
+    "\n",
+    "**Better examples:**\n",
+    "- “Design three layout ideas for the login screen.”\n",
+    "- “Write a brief report on how alliances contributed to the start of World War I.”\n",
+    "\n",
+    "**Solution:** Break the request into smaller, focused tasks.  \n",
+    "**Quick check:**\n",
+    "- Is the task bounded (clear end) or unbounded (could go on indefinitely)?\n",
+    "- Can I define a concrete deliverable (one screen, one feature, one section)?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Error 5: Scalability\n",
+    "**Problem:** The approach works small but fails at scale.\n",
+    "\n",
+    "**Examples (bad):**\n",
+    "- Data: “Analyze sales data” → pandas works for 100k rows but fails for 100M (need Spark/Dask).\n",
+    "- Surveys: “Design a survey” → 20 open-ended questions fine for 10 people, impossible for 10,000.\n",
+    "\n",
+    "**Better examples:**\n",
+    "- “Analyze sales data with Spark; dataset has 100M+ rows.”\n",
+    "- “Design a survey for 10,000 respondents with structured, aggregatable questions.”\n",
+    "\n",
+    "**Solution:** Always state the expected scale and environment.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Error 6: Silent Logical Errors\n",
+    "**Problem:** Prompt looks clear but hides an unstated rule, leading to misleading results.\n",
+    "\n",
+    "**Examples (bad):**\n",
+    "- “Assign a risk score to every client.” → Is 0 safe and 10 risky, or the reverse?\n",
+    "- “List active users last week.” → Does the week start Sunday or Monday?\n",
+    "\n",
+    "**Better examples:**\n",
+    "- “Risk score 0–10, where 0 = no risk and 10 = highest risk.”\n",
+    "- “List active users for Monday–Sunday, Aug 5–11.”\n",
+    "\n",
+    "**Solution:** Define rules and edge cases explicitly.  \n",
+    "**Quick check:** Could two people interpret the request differently and both think they’re right? If yes, add a rule.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Error 7: Responsible Use\n",
+    "**Problem:** Prompt ignores safety, ethics, fairness, or security responsibilities.\n",
+    "\n",
+    "**Examples (bad prompting):**\n",
+    "- **Security:** “Write login code.” → Model outputs insecure SQL injection code.\n",
+    "- **Fairness:** “Summarize hiring outcomes.” → Model outputs biased conclusions.\n",
+    "- **Ethics:** “Write ads for sugary drinks targeted at children.” → Harmful.\n",
+    "- **Data misuse:** “Analyze patient medical records.” → Sensitive private data.\n",
+    "- **Access misuse:** “Give me system logs.” → Confidential data exposure.\n",
+    "\n",
+    "**Better examples (responsible prompting):**\n",
+    "- “Write secure login code using validated inputs and prepared queries.”\n",
+    "- “Summarize hiring outcomes fairly, avoid generalizations, and note limitations.”\n",
+    "- “Write ad copy that avoids targeting vulnerable groups and follows health guidelines.”\n",
+    "\n",
+    "**Solution:** State responsible-use requirements explicitly. Never include or request sensitive/private/confidential data.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Error 8: Compatibility Issues\n",
+    "**Problem:** Output is correct but incompatible with the required environment, style, or conventions.\n",
+    "\n",
+    "**Examples (bad):**\n",
+    "- **Programming:** Model uses pandas but project uses polars.\n",
+    "- **Writing:** Revision doesn’t match Victorian prose style.\n",
+    "- **Design:** Generated skeuomorphic 3D icons when flat icons were required.\n",
+    "\n",
+    "**Better examples:**\n",
+    "- “Use polars library version 2.1+ for data processing.”\n",
+    "- “Revise Chapter 3 in formal Victorian prose: ornate sentences, elaborate vocabulary, indirect dialogue, detailed descriptions.”\n",
+    "- “Generate flat icons using Material Design guidelines.”\n",
+    "\n",
+    "**Solution:** Anchor outputs to the tools, libraries, conventions, or styles already in use.  \n",
+    "**Practical check:** What tools, styles, or formats already exist so you can reuse/follow them?\n"
    ]
   },
   {
